[project]
name = "ss13_codedb"
version = "0.1.0"
description = "Code ingestion for BYOND codebases."
readme = "README.md"
requires-python = ">=3.10.11"
dependencies = [
    "avulto>=0.1.22",
    "click>=8.3.0",
    "loguru>=0.7.3",
    "mariadb>=1.1.14",
    "mysqlclient>=2.2.7",
    "pygit2>=1.18.2",
    "sqlalchemy>=2.0.44",
]

[project.scripts]
create_db = "ss13_codedb.tools.create_db:main"
generate_parsed_git = "ss13_codedb.tools.generate_parsed_git:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
